--- a/app/src/main/res/layout/fragment_address_info.xml
+++ b/app/src/main/res/layout/fragment_address_info.xml
@@ -32,6 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Address  information"
+        android:fontFamily="@font/euclid_circular_b_bold"
+        android:textColor="#1C2129"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView14"
         app:layout_constraintEnd_toStartOf="@+id/imageView16"
         app:layout_constraintStart_toEndOf="@+id/imageView14"
@@ -39,7 +42,7 @@
 
     <ImageView
         android:id="@+id/imageView18"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:src="@drawable/linetwo"
@@ -53,6 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/euclid_circular_b_regular"
+        android:textColor="#2A2C2B"
+        android:textSize="16sp"
         android:text="Please enter residential address . "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18" />
@@ -65,6 +71,9 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="60dp"
         android:background="@drawable/button"
+        android:textSize="14sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/euclid_circular_b_bold"
         android:text="Proceed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
