--- a/app/src/main/res/layout/fragment_bank_verification.xml
+++ b/app/src/main/res/layout/fragment_bank_verification.xml
@@ -20,6 +20,9 @@
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/euclid_circular_b_bold"
+        android:textColor="#1C2129"
+        android:textSize="18sp"
         android:text="Bank verification"
         app:layout_constraintBottom_toBottomOf="@+id/imageView17"
         app:layout_constraintEnd_toStartOf="@+id/imageView19"
@@ -38,7 +41,7 @@
 
     <ImageView
         android:id="@+id/imageView20"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:src="@drawable/linethree"
@@ -52,6 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/euclid_circular_b_regular"
+        android:textColor="#2A2C2B"
+        android:textSize="16dp"
         android:text="Please provide your Bank Verification Number (BVN). "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
@@ -64,6 +70,9 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/button"
         android:text="Proceed"
+        android:textSize="14sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/euclid_circular_b_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="455dp" />
