--- a/app/src/main/res/layout/fragment_personal_detail.xml
+++ b/app/src/main/res/layout/fragment_personal_detail.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
         android:src="@drawable/arrowleft"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,6 +31,9 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/euclid_circular_b_bold"
+        android:textColor="#1C2129"
+        android:textSize="18sp"
         android:text="Personal details"
         app:layout_constraintBottom_toBottomOf="@+id/imageView11"
         app:layout_constraintEnd_toStartOf="@+id/imageView12"
@@ -38,7 +42,7 @@
 
     <ImageView
         android:id="@+id/imageView13"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:src="@drawable/lineone"
@@ -52,6 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/euclid_circular_b_regular"
+        android:textColor="#2A2C2B"
+        android:textSize="16sp"
         android:text="Please enter your personal information"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView13" />
@@ -65,6 +72,9 @@
         android:layout_marginBottom="60dp"
         android:background="@drawable/button"
         android:text="Proceed"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:fontFamily="@font/euclid_circular_b_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
