--- a/app/src/main/res/layout/fragment_phone_verification.xml
+++ b/app/src/main/res/layout/fragment_phone_verification.xml
@@ -21,6 +21,9 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/euclid_circular_b_bold"
+        android:textColor="#1C2129"
+        android:textSize="18sp"
         android:text="Phone number verification"
         app:layout_constraintBottom_toBottomOf="@+id/imageView24"
         app:layout_constraintEnd_toStartOf="@+id/imageView25"
@@ -39,7 +42,7 @@
 
     <ImageView
         android:id="@+id/imageView26"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:src="@drawable/linefour"
@@ -54,7 +57,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/euclid_circular_b_regular"
         android:text="Please enter OTP sent to your BVN registered phone number. "
+        android:textColor="#2A2C2B"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView26" />
 
@@ -66,6 +72,9 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/button"
         android:text="Proceed"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:fontFamily="@font/euclid_circular_b_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="449dp" />
