--- a/app/src/main/res/layout/fragment_set_password.xml
+++ b/app/src/main/res/layout/fragment_set_password.xml
@@ -22,6 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Set your password"
+        android:fontFamily="@font/euclid_circular_b_bold"
+        android:textColor="#1C2129"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView21"
         app:layout_constraintEnd_toStartOf="@+id/imageView22"
         app:layout_constraintStart_toEndOf="@+id/imageView21"
@@ -56,6 +59,9 @@
         android:layout_marginBottom="60dp"
         android:background="@drawable/button"
         android:text="Proceed"
+        android:textSize="14sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/euclid_circular_b_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
