--- a/app/src/main/res/layout/fragment_create_password_one.xml
+++ b/app/src/main/res/layout/fragment_create_password_one.xml
@@ -24,7 +24,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="45dp"
         android:text="Create New Password"
+        android:fontFamily="@font/euclid_circular_b_regular"
         android:textColor="#2A2C2B"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -35,6 +37,8 @@
         android:layout_marginEnd="20dp"
         android:text="Your password adds a layer of security to your CloudBank account"
         android:textColor="#667085"
+        android:fontFamily="@font/euclid_circular_b_regular"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
