--- a/app/src/main/res/layout/fragment_bank_verification.xml
+++ b/app/src/main/res/layout/fragment_bank_verification.xml
@@ -55,10 +55,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/euclid_circular_b_regular"
+        android:text="Please provide your Bank Verification Number (BVN). "
         android:textColor="#2A2C2B"
         android:textSize="16dp"
-        android:text="Please provide your Bank Verification Number (BVN). "
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
 
