--- a/app/src/main/res/layout/fragment_create_password_one.xml
+++ b/app/src/main/res/layout/fragment_create_password_one.xml
@@ -39,6 +39,7 @@
         android:textColor="#667085"
         android:fontFamily="@font/euclid_circular_b_regular"
         android:textSize="14sp"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
