--- a/app/src/main/res/layout/fragment_phone_verification.xml
+++ b/app/src/main/res/layout/fragment_phone_verification.xml
@@ -57,10 +57,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/euclid_circular_b_regular"
         android:text="Please enter OTP sent to your BVN registered phone number. "
         android:textColor="#2A2C2B"
         android:textSize="16dp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView26" />
 
