--- a/app/src/main/res/layout/fragment_set_password.xml
+++ b/app/src/main/res/layout/fragment_set_password.xml
@@ -50,18 +50,84 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/CreatePass"
+        style="@style/MyTextInputLayoutStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView23">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:letterSpacing="-0.02"
+            android:textSize="14sp"
+            android:fontFamily="@font/euclid_circular_b_medium"
+            android:hint="Password" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/CreateConfirmPass"
+        style="@style/MyTextInputLayoutStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CreatePass">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/euclid_circular_b_medium"
+            android:hint="Confirm Password"
+            android:letterSpacing="-0.02"
+            android:textSize="14sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/Minimum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#0093DA"
+        android:fontFamily="@font/euclid_circular_b_light"
+        android:visibility="gone"
+        android:text=" Minimum of 6 characters"
+        app:layout_constraintStart_toStartOf="@+id/CreateConfirmPass"
+        app:layout_constraintTop_toBottomOf="@+id/CreateConfirmPass" />
+
+    <TextView
+        android:id="@+id/DoesNotMatch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#0093DA"
+        android:visibility="gone"
+        android:fontFamily="@font/euclid_circular_b_light"
+        android:text="*Password does not match*"
+        app:layout_constraintStart_toStartOf="@+id/Minimum"
+        app:layout_constraintTop_toBottomOf="@+id/Minimum" />
+
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/SetPasswordBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="60dp"
         android:background="@drawable/button"
-        android:text="Proceed"
-        android:textSize="14sp"
-        android:textColor="#FFFFFF"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Proceed"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
