--- a/app/src/main/res/layout/fragment_address_info.xml
+++ b/app/src/main/res/layout/fragment_address_info.xml
@@ -30,8 +30,8 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Address  information"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Address  information"
         android:textColor="#1C2129"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView14"
@@ -56,9 +56,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Please enter residential address . "
         android:textColor="#2A2C2B"
         android:textSize="16sp"
-        android:text="Please enter residential address . "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18" />
 
@@ -69,23 +69,23 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="60dp"
-        android:background="@drawable/button"
-        android:textSize="14sp"
-        android:textColor="#FFFFFF"
         android:fontFamily="@font/euclid_circular_b_bold"
         android:text="Proceed"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:background="@drawable/button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout10"
+        style="@style/MyTextInputLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="20dp"
-        style="@style/MyTextInputLayoutStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20">
@@ -93,18 +93,18 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/euclid_circular_b_light"
+            android:hint="*Residential address"
             android:letterSpacing="-0.02"
-            android:textSize="14sp"
-            android:fontFamily="@font/euclid_circular_b_medium"
-            android:hint="*Residential address" />
+            android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout11"
+        style="@style/MyTextInputLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        style="@style/MyTextInputLayoutStyle"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">
@@ -112,17 +112,17 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/euclid_circular_b_light"
+            android:hint="*State of Residence"
             android:letterSpacing="-0.02"
-            android:textSize="14sp"
-            android:fontFamily="@font/euclid_circular_b_medium"
-            android:hint="*State of Residence" />
+            android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/MyTextInputLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        style="@style/MyTextInputLayoutStyle"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout11"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">
@@ -130,10 +130,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/euclid_circular_b_light"
             android:letterSpacing="-0.02"
-            android:textSize="14sp"
-            android:fontFamily="@font/euclid_circular_b_medium"
-            android:hint="*LGA" />
+            android:hint="*LGA"
+            android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
