--- a/app/src/main/res/layout/fragment_create_password_one.xml
+++ b/app/src/main/res/layout/fragment_create_password_one.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="45dp"
         android:text="Create New Password"
-        android:fontFamily="@font/euclid_circular_b_regular"
+        android:fontFamily="@font/euclid_circular_b_bold"
         android:textColor="#2A2C2B"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,13 +51,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
-        android:textColorHint="#667085"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="#EAECF0"
-        app:boxStrokeWidth="1dp"
+        style="@style/MyTextInputLayoutStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -66,6 +60,9 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:letterSpacing="-0.02"
+            android:textSize="14sp"
+            android:fontFamily="@font/euclid_circular_b_medium"
             android:singleLine="true"
             android:hint="New Password" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -96,13 +93,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:textColorHint="#667085"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="#EAECF0"
-        app:boxStrokeWidth="1dp"
+        style="@style/MyTextInputLayoutStyle"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
@@ -111,6 +102,9 @@
             android:id="@+id/passwordErrorText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:letterSpacing="-0.02"
+            android:textSize="14sp"
+            android:fontFamily="@font/euclid_circular_b_medium"
             android:hint="Confirm New Password"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -132,7 +126,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/euclid_circular_b_bold"
         android:textColor="#FFFFFF"
+        android:textSize="14sp"
         android:text="Proceed"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
