--- a/app/src/main/res/layout/fragment_login_one.xml
+++ b/app/src/main/res/layout/fragment_login_one.xml
@@ -87,6 +87,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="230dp"
+        android:background="@drawable/button"
+        android:fontFamily="@font/euclid_circular_b_bold"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
