--- a/app/src/main/res/layout/fragment_phone_verification.xml
+++ b/app/src/main/res/layout/fragment_phone_verification.xml
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Phone number verification"
         android:textColor="#1C2129"
         android:textSize="18sp"
-        android:text="Phone number verification"
         app:layout_constraintBottom_toBottomOf="@+id/imageView24"
         app:layout_constraintEnd_toStartOf="@+id/imageView25"
         app:layout_constraintStart_toEndOf="@+id/imageView24"
@@ -67,20 +67,65 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView26" />
 
-    <Button
+
+    <com.chaos.view.PinView
+        android:id="@+id/pinView"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
+        android:elevation="10dp"
+        android:inputType="number"
+        android:textSize="20dp"
+        app:itemHeight="60dp"
+        app:itemRadius="5dp"
+        app:itemSpacing="15dp"
+        app:itemWidth="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25"
+        app:lineColor="#4D000000"
+        app:viewType="rectangle">
+
+    </com.chaos.view.PinView>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/euclid_circular_b_bold"
         android:text="Proceed"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        android:fontFamily="@font/euclid_circular_b_bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="You didn't receive OTP?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="449dp" />
+        app:layout_constraintTop_toBottomOf="@+id/pinView" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Resend"
+        android:textStyle="bold"
+        android:textColor="#0093DA"
+        app:layout_constraintBottom_toBottomOf="@+id/textView33"
+        app:layout_constraintStart_toEndOf="@+id/textView33"
+        app:layout_constraintTop_toTopOf="@+id/textView33" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
