--- a/app/src/main/res/layout/sendmoneysuccessful_bottom3.xml
+++ b/app/src/main/res/layout/sendmoneysuccessful_bottom3.xml
@@ -21,6 +21,7 @@
 
         <ImageView
             android:id="@+id/imageView6"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -95,6 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Proceed"
+        android:textSize="16dp"
         app:backgroundTint="#0093DA"
         app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
