Added these to my xml to assist in checking the document on the device - Phase 2

--- a/app/src/main/res/drawable/done_1.xml
+++ b/app/src/main/res/drawable/done_1.xml
@@ -4,6 +4,5 @@
     android:viewportWidth="185"
     android:viewportHeight="185">
   <path
-      android:pathData="M0,0h185v185h-185z"
-      android:fillColor="url(#pattern0)"/>
+      android:pathData="M0,0h185v185h-185z" />
 </vector>
