--- a/app/src/main/res/layout/fragment_login_one.xml
+++ b/app/src/main/res/layout/fragment_login_one.xml
@@ -54,6 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView29">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:letterSpacing="-0.02"
@@ -72,6 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:letterSpacing="-0.02"
