--- a/app/src/main/res/layout/fragment_personal_detail.xml
+++ b/app/src/main/res/layout/fragment_personal_detail.xml
@@ -89,6 +89,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView18">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/surName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -108,6 +109,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/firstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -127,6 +129,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/otherName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -145,6 +148,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/phoneCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -163,6 +167,7 @@
             app:layout_constraintTop_toBottomOf="@+id/CreateConfirmPass">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -182,6 +187,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/dateOfBirth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -201,6 +207,7 @@
             app:layout_constraintTop_toTopOf="@+id/CreateConfirmPass">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/phoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
@@ -218,6 +225,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/referralCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
