Added these to my xml to assist in checking the document on the device - Phase 2

--- a/app/src/main/res/navigation/mynav.xml
+++ b/app/src/main/res/navigation/mynav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mynav"
-    app:startDestination="@id/createPasswordOneFragment">
+    app:startDestination="@id/splashScreen">
 
     <fragment
         android:id="@+id/createPasswordOneFragment"
