--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/euclid_circular_b_bold"
         android:backgroundTint="#0093DA"
         android:text="Open an account"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,22 +61,24 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:backgroundTint="@color/white"
+        android:background="@drawable/btn2"
+        android:fontFamily="@font/euclid_circular_b_bold"
         android:text="Login"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
+        android:textColor="#0093DA"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/button5"
         app:layout_constraintStart_toStartOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
-        app:strokeColor="#0093DA" >
-
-    </com.google.android.material.button.MaterialButton>
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/euclid_circular_b_medium"
+        android:textSize="14sp"
+        android:letterSpacing="-0.02"
+        android:textColor="#802C2B80"
         android:text="Already have an account? Get login details"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
