--- a/app/src/main/res/layout/fragment_address_info.xml
+++ b/app/src/main/res/layout/fragment_address_info.xml
@@ -96,6 +96,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
             android:hint="*Residential address"
+            android:singleLine="true"
             android:letterSpacing="-0.02"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -116,6 +117,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
             android:hint="*State of Residence"
+            android:singleLine="true"
             android:letterSpacing="-0.02"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -135,6 +137,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
             android:letterSpacing="-0.02"
+            android:singleLine="true"
             android:hint="*LGA"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
