--- a/app/src/main/res/layout/fragment_bank_verification.xml
+++ b/app/src/main/res/layout/fragment_bank_verification.xml
@@ -100,6 +100,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
             android:hint="Enter BVN"
+            android:inputType="number"
+            android:singleLine="true"
             android:letterSpacing="-0.02"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
