--- a/app/src/main/res/layout/fragment_login_one.xml
+++ b/app/src/main/res/layout/fragment_login_one.xml
@@ -59,6 +59,8 @@
             android:layout_height="wrap_content"
             android:letterSpacing="-0.02"
             android:textSize="14sp"
+            android:inputType="number"
+            android:singleLine="true"
             android:fontFamily="@font/euclid_circular_b_medium"
             android:hint="Phone Number" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,6 +81,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_medium"
             android:hint="Password"
+            android:singleLine="true"
             android:letterSpacing="-0.02"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
