--- a/app/src/main/res/layout/fragment_personal_detail.xml
+++ b/app/src/main/res/layout/fragment_personal_detail.xml
@@ -94,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="*Surname"
+                android:singleLine="true"
                 android:letterSpacing="-0.02"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -114,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="*First name"
+                android:singleLine="true"
                 android:letterSpacing="-0.02"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -134,6 +136,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="Other names"
+                android:singleLine="true"
                 android:letterSpacing="-0.02"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -153,6 +156,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:text="+234"
+                android:singleLine="true"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -172,6 +176,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
                 android:letterSpacing="-0.02"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -192,6 +198,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="*Date of Birth"
+                android:singleLine="true"
+                android:inputType="date"
                 android:letterSpacing="-0.02"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -210,6 +218,8 @@
                 android:id="@+id/phoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:inputType="number"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="Phone number" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -228,6 +238,7 @@
                 android:id="@+id/referralCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:fontFamily="@font/euclid_circular_b_light"
                 android:hint="Referral Code" />
 
