--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -56,6 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone Number"
+            android:singleLine="true"
+            android:inputType="number"
             android:fontFamily="@font/euclid_circular_b_light"
             android:letterSpacing="-0.02"
             android:textSize="14sp" />
